--- a/src/components/button/button--reverse.twig
+++ b/src/components/button/button--reverse.twig
@@ -1,1 +1,1 @@
-<a href="{{url}}" class="button button--reverse">{{text}}</a>
+<a href="{{url}}" class="button button--reverse">{{text}}<span class="arrow"></span></a>
