--- a/src/components/call-to-action/_call-to-action.scss
+++ b/src/components/call-to-action/_call-to-action.scss
@@ -34,6 +34,9 @@
     }
     .button {
       background-color: transparent;
+      &:hover {
+        color: $iastate-maroon;
+      }
     }
   }
 
