--- a/src/scss/_core/_layout.scss
+++ b/src/scss/_core/_layout.scss
@@ -22,7 +22,7 @@
 
 main {
   padding-top: rem(55);
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(xl) {
     padding-top: rem(117);
   }
 }
