removing unused components - updating text content example

--- a/src/components/text-content/text-content.twig
+++ b/src/components/text-content/text-content.twig
@@ -4,7 +4,7 @@
 	<h2>Heading Level 2 Lorem Ipsum Dolor Sit Amet</h2>
 	<p><a href="">Link text lorem ipsum</a> amet, consectetur adipisicing elit. Praesentium, dignissimos! Dolorem, saepe. Ducimus porro modi dolorum ipsa quisquam harum minus, sint similique, dolore quo voluptates ipsam autem accusamus id eum.</p>
 	<h3>Heading Level 3 Lorem Ipsum Amet Consectetur</h3>
-	<p><a href="" class="fancy-link">Fancy link text</a> sit amet consectetur adipisicing elit. Vel odio eius fugiat officiis id iure facere ratione magnam sunt quis maxime, minus, quos voluptas itaque quidem expedita voluptates reprehenderit magni.</p>
+	<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore tempore eaque possimus debitis adipisci nulla, dolorem assumenda, voluptatibus neque illum fugit excepturi reiciendis magni veniam in itaque aliquam. Eum, cumque.</p>
 	<h4>Heading Level 4 Adipisicing Dolor Amet Sit</h4>
 	<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore tempore eaque possimus debitis adipisci nulla, dolorem assumenda, voluptatibus neque illum fugit excepturi reiciendis magni veniam in itaque aliquam. Eum, cumque.</p>
 	<h5>Heading Level 5 Dolore Tempore Eaque Possimus</h5>
@@ -20,12 +20,7 @@
 			<ul>
 				<li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum mollitia deleniti dolorem nostrum omnis suscipit quis? Accusamus soluta, incidunt aperiam fugiat necessitatibus quae blanditiis sit vel obcaecati sapiente reiciendis exercitationem.</li>
 				<li>Qui eaque assumenda perferendis laudantium cupiditate eum officia, quibusdam dignissimos tempore aut repellat laborum porro, neque mollitia delectus asperiores modi culpa architecto voluptate quaerat. Tempora corporis atque quidem recusandae alias.</li>
-				<li>Repudiandae commodi, modi cupiditate minus neque consequuntur animi architecto aliquid! Atque asperiores, aut, nulla ex molestias amet cumque iste enim sapiente suscipit repellat iusto! Aspernatur omnis iure corporis saepe consectetur.
-					<ul>
-						<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. At sed doloribus quaerat sunt numquam! Eligendi sequi provident nam! Cum fugit rem sed totam. Id omnis cum nemo temporibus neque numquam.</li>
-						<li>Maxime porro architecto molestiae inventore ducimus iste, sunt atque laborum cum ipsa laboriosam asperiores, exercitationem debitis ipsam magni fugit facilis, eaque delectus dolor sequi. Non quis tempora corrupti similique cum.</li>
-					</ul>
-				</li>
+				<li>Repudiandae commodi, modi cupiditate minus neque consequuntur animi architecto aliquid! Atque asperiores, aut, nulla ex molestias amet cumque iste enim sapiente suscipit repellat iusto! Aspernatur omnis iure corporis saepe consectetur.</li>
 			</ul>
 		</li>
 	</ul>
@@ -38,10 +33,5 @@
 				<li>Minus velit, molestiae reiciendis eaque dolorem ullam id quos adipisci voluptas. Culpa voluptatibus repellendus quisquam dolorem assumenda, architecto nostrum eum nulla exercitationem dolorum amet, veritatis provident doloribus saepe, odio earum.</li>
 			</ol>
 		</li>
-	</ol>
-	{# Styled ol class uses CSS before pseudos instead of standard list style numbers to provide more control over styling the numbers. #}
-	<ol class="styled-ol">
-		<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, mollitia cupiditate molestias tenetur consequuntur deleniti asperiores, earum voluptas quisquam totam soluta nisi sapiente accusamus, ea odio possimus esse in amet.</li>
-		<li>Minus velit, molestiae reiciendis eaque dolorem ullam id quos adipisci voluptas. Culpa voluptatibus repellendus quisquam dolorem assumenda, architecto nostrum eum nulla exercitationem dolorum amet, veritatis provident doloribus saepe, odio earum.</li>
 	</ol>
 </div>
