--- a/src/components/blockquote/_blockquote.scss
+++ b/src/components/blockquote/_blockquote.scss
@@ -1,63 +1,106 @@
-@import "variables";
+.paragraph-widget--blockquote {
+  @extend %full-width-component;
+  @include media-breakpoint-up(xl) {
+    margin-top: rem(60);
+    margin-bottom: rem(60);
+  }
+}
 
-.blockquote {
+.iastate22-blockquote {
+  background-color: $iastate-red;
+  @extend %outer-pad-x;
+  padding: rem(140) rem(36) rem(100);
+  position: relative;
+  @include media-breakpoint-up(xl) {
+    padding: rem(60) rem(36) rem(90);
+  }
+}
+
+.iastate22-blockquote__inner-wrap {
+  @include media-breakpoint-up(xl) {
+    display: flex;
+    align-items: flex-start;
+    width: 90%;
+    margin: 0 auto;
+  }
+  @include media-breakpoint-up(xxl) {
     position: relative;
-    background: $blockquote-background;
-    color: $blockquote-color;
-    max-width: $blockquote-max-width;
-    margin: $blockquote-margin;
-    padding: $blockquote-padding;
-    &:before {
-        display: block;
-        height: $blockquote_before-height;
-        font-family: $blockquote_before-font-family;
-        font-size: $blockquote_before-font-size;
-        font-weight: $blockquote_before-font-weight;
-        line-height: $blockquote_before-line-height;
-        content: $blockquote_before-content;
+    width: 80%;
+    left: rem(-60);
+  }
+  .iastate22-blockquote--with-no-image & {
+    @include media-breakpoint-up(xl) {
+      padding-left: rem(258);
     }
+  }
 }
 
-.blockquote__quote {
-    font-family: $blockquote_quote-font-family;
-    font-size: $blockquote_quote-font-size;
-    line-height: $blockquote_quote-line-height;
-    margin: $blockquote_quote-margin;
-    padding: $blockquote_quote-padding;
+.iastate22-blockquote__portrait {
+  @extend %responsive-img;
+  max-width: rem(166);
+  margin: rem(-80) auto rem(28);
+  @include media-breakpoint-up(xl) {
+    flex: 0 0 auto;
+    margin: 0;
+    max-width: rem(258);
+    width: rem(258);
+    left: rem(-12);
+  }
+
+  &:before {
+    padding-top: 100%;
+  }
+  img {
+    border-radius: 50%;
+  }
 }
 
-.blockquote__footer {
-    font-family: $blockquote_footer-font-family;
-    margin: $blockquote_footer-margin;
-    padding: $blockquote_footer-padding;
-}
-
-.blockquote__author {
-    font-size: $blockquote_author-font-size;
-    font-weight: $blockquote_author-font-weight;
-}
-
-.blockquote__source {
-    font-size: $blockquote_source-font-size;
-    font-weight: $blockquote_source-font-weight;
-}
-
-.blockquote__portrait {
-    position: relative;
-    width: $blockquote_portrait-width;
-    &:before {
-        content: "";
-        display: block;
-        padding-top: $blockquote_portrait-aspect-ratio;
+.iastate22-blockquote__text-wrap {
+  position: relative;
+  @include media-breakpoint-up(xl) {
+    padding-left: rem(50);
+  }
+  @include media-breakpoint-up(xxl) {
+  }
+  &:before,
+  &:after {
+    content: "";
+    position: absolute;
+    width: rem(64);
+    height: rem(52);
+    background-repeat: no-repeat no-repeat;
+    background-position: center center;
+    background-size: rem(64) rem(52);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='63.979' height='52'%3E%3Cg data-name='Group 416' fill='%23f1be48'%3E%3Cpath data-name='“' d='M27.043 52.001v-25h-16c-.4-10 4.8-15.8 16-17.8v-9.2c-17.6 1.4-27.8 12.8-27 30.2v21.8ZM63.979 52.001v-25h-16c-.4-10 4.8-15.8 16-17.8v-9.2c-17.6 1.4-27.8 12.8-27 30.2v21.8Z'/%3E%3C/g%3E%3C/svg%3E");
+  }
+  &:before {
+    top: rem(-80);
+    @include media-breakpoint-up(xl) {
+      top: rem(-9);
+      margin-left: rem(-115);
     }
-    img {
-        display: block;
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        object-position: center;
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
+  }
+  &:after {
+    transform: rotate(180deg);
+    bottom: rem(-28);
+    right: 0;
+  }
+}
+.iastate22-blockquote__quote {
+  color: $white;
+  padding: 0;
+  margin: 0;
+  @include media-breakpoint-up(md) {
+    font-size: rem(40);
+    line-height: (58 / 40);
+  }
+}
+.iastate22-blockquote__author {
+  color: $white;
+  font-family: $nimbus-sans-bold;
+  font-weight: 700;
+  margin-top: rem(20);
+  @include media-breakpoint-up(xl) {
+    margin-top: rem(2);
+  }
 }
