--- a/src/components/pages/kitchen-sink.twig
+++ b/src/components/pages/kitchen-sink.twig
@@ -156,11 +156,11 @@
   <div class="paragraph-widget paragraph-widget--external-news-story">
     {% include "@external-news-story" with external_news_story %}
   </div>
-  <div class="paragraph-widget paragraph-widget--pull-quote">
-    {% include "@pull-quote" with pull_quote_no_author %}
+  <div class="paragraph-widget paragraph-widget--blockquote">
+    {% include "@blockquote" with pull_quote_no_author %}
   </div>
-  <div class="paragraph-widget paragraph-widget--pull-quote">
-    {% include "@pull-quote" with pull_quote_with_author %}
+  <div class="paragraph-widget paragraph-widget--blockquote">
+    {% include "@blockquote" with pull_quote_with_author %}
   </div>
   <div class="paragraph-widget paragraph-widget--text-html">
     <div class="text-content">
