updating breadcrumb component class and documentation

--- a/src/components/breadcrumb/_breadcrumb.scss
+++ b/src/components/breadcrumb/_breadcrumb.scss
@@ -1,9 +1,9 @@
-.breadcrumb {
+.iastate22-breadcrumb {
   margin: rem(18) 0 rem(8);
   padding: 0;
 }
 
-.breadcrumb__list {
+.iastate22-breadcrumb__list {
   list-style-type: none;
   margin: 0;
   padding: 0;
