--- a/src/components/breadcrumb/breadcrumb.twig
+++ b/src/components/breadcrumb/breadcrumb.twig
@@ -1,5 +1,5 @@
-<nav class="breadcrumb" aria-label="Breadcrumb">
-	<ol class="breadcrumb__list">
+<nav class="iastate22-breadcrumb" aria-label="Breadcrumb">
+	<ol class="iastate22-breadcrumb__list">
 		{% for link in links %}
 			<li>
 				<a href="{{ link.url }}"{% if loop.last %} aria-current="page"{% endif %}>{{ link.name }}</a>
