--- a/src/components/modal/modal--with-form.twig
+++ b/src/components/modal/modal--with-form.twig
@@ -1,4 +1,4 @@
-<button class="button" data-micromodal-trigger="{{ id }}">Modal Trigger</div>
+<button class="iastate22-button" data-micromodal-trigger="{{ id }}">Modal Trigger</div>
 
 <div class="modal" id="{{ id }}" aria-hidden="false">
   <div class="modal__overlay" tabindex="-1" data-micromodal-close>
