--- a/src/components/button-set/button-set.twig
+++ b/src/components/button-set/button-set.twig
@@ -2,7 +2,7 @@
   <ul>
     {% for item in items %}
       <li>
-        <a class="button" href="{{ item.url }}">{{ item.text }}<span class="arrow"></span></a>
+        <a class="iastate22-button" href="{{ item.url }}">{{ item.text }}<span class="arrow"></span></a>
       </li>
     {% endfor %}
   </ul>
