--- a/src/components/button/button--reverse.twig
+++ b/src/components/button/button--reverse.twig
@@ -1,1 +1,1 @@
-<a href="{{url}}" class="button button--reverse">{{text}}<span class="arrow"></span></a>
+<a href="{{url}}" class="iastate22-button iastate22-button--reverse">{{text}}<span class="arrow"></span></a>
