--- a/src/components/button/button.twig
+++ b/src/components/button/button.twig
@@ -1,1 +1,1 @@
-<a href="{{url}}" class="button">{{text}}<span class="arrow"></span></a>
+<a href="{{url}}" class="iastate22-button">{{text}}<span class="arrow"></span></a>
