--- a/src/components/feature-with-large-image/_feature-with-large-image.scss
+++ b/src/components/feature-with-large-image/_feature-with-large-image.scss
@@ -23,7 +23,7 @@
     margin: 0 0 rem(25);
     padding: 0;
   }
-  .button-set {
+  .iastate22-button-set {
     margin-top: rem(25);
   }
   &:before {
