--- a/src/components/call-to-action/call-to-action.twig
+++ b/src/components/call-to-action/call-to-action.twig
@@ -1,1 +1,1 @@
-{# This component is empty for fractal - creating default #}
+<p>(This variant of the component is empty for fractal purposes - please see other variants)</p>
