--- a/src/components/site-header/site-header.twig
+++ b/src/components/site-header/site-header.twig
@@ -42,6 +42,9 @@
     <div class="site-header__mega-menu" id="site-header-mega-menu">
       <div class="site-header__mega-menu-inner">
         <div class="site-header__mega-menu-scroller">
+          <noscript>
+            <a href="#" role="button" class="nojs-close-menu">Close Main Menu</a>
+          </noscript>
           <div>
             <div class="site-header__mega-menu-main">
               <div class="site-header__mega-menu-max-bound">
