--- a/src/components/site-header/site-header.twig
+++ b/src/components/site-header/site-header.twig
@@ -25,7 +25,7 @@
       <form class="site-header__search-form-desktop">
         <div>
           <span class="visible-for-screen-readers">Search</span>
-          <input type="search" id="searchDesktop" name="search">
+          <input type="search" id="searchDesktop" name="search" placeholder="Search">
           <button type="submit"><span class="fak fa-id5-magnifying-glass"></span></button>
         </div>
       </form>
@@ -82,7 +82,7 @@
                       </ul>
                       <form class="site-header__search-form-mobile">
                         <span class="visible-for-screen-readers">Search</span>
-                        <input type="search" id="searchMobile" name="search">
+                        <input type="search" id="searchMobile" name="search" placeholder="Search">
                         <button type="submit"><span class="fak fa-id5-magnifying-glass"></span></button>
                       </form>
                     </nav>
