--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -739,6 +739,7 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
     width: 100%;
     height: rem(48);
     border: none;
+    background-color: $white;
     &::placeholder {
       color: transparent;
     }
@@ -747,7 +748,15 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
         color: currentColor;
       }
     }
+    // hide ios search icons from input
+    &[type="search"]::-webkit-search-decoration,
+    &[type="search"]::-webkit-search-cancel-button,
+    &[type="search"]::-webkit-search-results-button,
+    &[type="search"]::-webkit-search-results-decoration {
+      display: none;
+    }
   }
+
   button[type="submit"] {
     background-color: $white;
     border: none;
